# DailyRiffV2

./: .env.example  .gitattributes  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  Makefile  RALPH_DECISIONS.md  TODOS.md  TOOLCHAIN.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: alembic.ini  openapi.snapshot.json  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_infra_baseline.py  0002_studios.py  0003_platform_settings.py  0004_resources.py  0005_rate_limiting.py  0006_messaging.py  0007_notification_templates.py  0008_dailyriff_employees.py  0009_waitlist.py  0010_invitations.py  0011_assignments_recordings.py  0012_loans.py  0013_impersonation_playback_log.py  0014_coppa_consents.py  0015_log_retention_cleanup.py  0016_payments.py  0017_account_conversion.py  0018_impersonation_sessions.py  0019_lessons_attendance.py  0020_beta_feedback.py  0021_soft_delete_coppa_deletion.py
apps/api/src/dailyriff_api/: __init__.py  auth.py  db.py  main.py  pagination.py  rate_limit.py
apps/api/src/dailyriff_api/routers/: account_conversion.py  admin.py  assignments.py  beta.py  coppa.py  coppa_deletion.py  devices.py  employees.py  health.py  impersonation.py  invitations.py  lessons.py  messaging.py  (+11 more)
apps/api/tests/: conftest.py
apps/api/tests/contract/: test_schemathesis.py
apps/api/tests/integration/: test_devices_endpoints.py  test_preferences_endpoints.py  test_resources_endpoints.py  test_rls_isolation.py  test_studios_endpoints.py
apps/api/tests/unit/: test_account_conversion_router.py  test_account_conversion_service.py  test_admin_router.py  test_assignment_service.py  test_assignments_router.py  test_attendance_service.py  test_auth_middleware.py  test_beta_router.py  test_bootstrap_script.py  test_business_caps.py  test_captcha.py  test_coppa_deletion_router.py  test_coppa_deletion_service.py  test_coppa_router.py  test_coppa_service.py  test_device_router.py  test_employee_router.py  test_enumeration_defense.py  test_idempotency.py  test_impersonation_router.py  test_invitation_router.py  test_invitation_service.py  test_lesson_service.py  test_lessons_router.py  test_messaging_router.py  test_messaging_service.py  test_mfa_service.py  test_notification_event_service.py  test_notification_service.py  test_notification_templates_router.py  test_parent_dashboard_router.py  test_payments_router.py  test_playback_authorization.py  test_preferences_router.py  test_r2_credentials.py  test_rate_limit.py  test_recording_service.py  test_recordings_router.py  test_resource_router.py  test_retention_service.py  (+8 more)
(+156 files in other folders)
