[project]
name = "dailyriff-api"
version = "0.0.0"
description = "DailyRiff FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dailyriff_api"]

[tool.alembic]
# Alembic config lives in alembic.ini; this is just a marker.
