[project]
name = "dailyriff-api"
version = "0.0.0"
description = "DailyRiff FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pyjwt>=2.9",
    "httpx>=0.27",
    "pywebpush>=2.0",
    "pydantic>=2.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "schemathesis>=3.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/dailyriff_api"]

[tool.coverage.report]
include = [
    "src/dailyriff_api/auth.py",
    "src/dailyriff_api/rate_limit.py",
    "src/dailyriff_api/services/*",
    "src/dailyriff_api/routers/*",
    "src/dailyriff_api/schemas/*",
]
fail_under = 85

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dailyriff_api"]

[tool.alembic]
# Alembic config lives in alembic.ini; this is just a marker.
